check2.txt
    Checking veltrix v0.1.0 (C:\Users\Admin\github\Veltrix)
error[E0432]: unresolved imports `sysinfo::SystemExt`, `sysinfo::CpuExt`
 --> src\platform\system_info.rs:3:23
  |
3 | use sysinfo::{System, SystemExt, CpuExt};
  |                       ^^^^^^^^^  ^^^^^^ no `CpuExt` in the root
  |                       |
  |                       no `SystemExt` in the root
  |                       help: a similar name exists in the module: `System`

warning: unused import: `std::any::Any`
 --> src\assets\handle.rs:3:5
  |
3 | use std::any::Any;
  |     ^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `std::sync::Arc`
 --> src\assets\handle.rs:6:5
  |
6 | use std::sync::Arc;
  |     ^^^^^^^^^^^^^^

warning: unused import: `wgpu::Device`
 --> src\assets\server.rs:6:5
  |
6 | use wgpu::Device;
  |     ^^^^^^^^^^^^

warning: unused import: `Source`
 --> src\audio\clip.rs:4:22
  |
4 | use rodio::{Decoder, Source};
  |                      ^^^^^^

warning: unused import: `std::sync::Arc`
 --> src\audio\manager.rs:5:5
  |
5 | use std::sync::Arc;
  |     ^^^^^^^^^^^^^^

warning: unused import: `crate::math::random_range`
 --> src\camera\shake.rs:4:5
  |
4 | use crate::math::random_range;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `crate::math::Vec2`
  --> src\input\mod.rs:12:5
   |
12 | use crate::math::Vec2;
   |     ^^^^^^^^^^^^^^^^^

warning: unused import: `Transform2D`
 --> src\scene\components.rs:5:25
  |
5 | use crate::math::{Rect, Transform2D};
  |                         ^^^^^^^^^^^

error[E0599]: no method named `name` found for struct `sysinfo::System` in the current scope
  --> src\platform\system_info.rs:48:18
   |
48 |         self.sys.name()
   |         ---------^^^^--
   |         |        |
   |         |        this is an associated function, not a method
   |         help: use associated function syntax instead: `sysinfo::System::name()`
   |
   = note: found the following associated functions; to be used as methods, functions must have a `self` parameter
   = note: the candidate is defined in an impl for the type `sysinfo::System`

error[E0599]: no method named `os_version` found for struct `sysinfo::System` in the current scope
  --> src\platform\system_info.rs:53:18
   |
53 |         self.sys.os_version()
   |         ---------^^^^^^^^^^--
   |         |        |
   |         |        this is an associated function, not a method
   |         help: use associated function syntax instead: `sysinfo::System::os_version()`
   |
   = note: found the following associated functions; to be used as methods, functions must have a `self` parameter
   = note: the candidate is defined in an impl for the type `sysinfo::System`

warning: unused import: `slotmap::Key`
 --> src\ecs\storage.rs:5:5
  |
5 | use slotmap::Key;
  |     ^^^^^^^^^^^^

warning: variable does not need to be mutable
   --> src\core\engine.rs:157:13
    |
157 |         let mut should_exit = false;
    |             ----^^^^^^^^^^^
    |             |
    |             help: remove this `mut`
    |
    = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `should_exit`
   --> src\core\engine.rs:157:13
    |
157 |         let mut should_exit = false;
    |             ^^^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_should_exit`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

Some errors have detailed explanations: E0432, E0599.
For more information about an error, try `rustc --explain E0432`.
warning: `veltrix` (lib) generated 11 warnings
error: could not compile `veltrix` (lib) due to 3 previous errors; 11 warnings emitted
